<resources>
    <string name="app_name">Logica</string>
    <string name="conjuction">Conjuction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">A^B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="answerHint"> F or T ?</string>
    <string name="submit">submit</string>
    <string name="toastNumberAnswersCorrect">The correct number of answers is: </string>
</resources>
